ggplot2 1.0.1
----------------------------------------------------------------

* Fixes to pass `R CMD check --run-donttest` in R-devel.

ggplot2 1.0.0
----------------------------------------------------------------

NEW FEATURES

* New coordinate system for small scale maps. `coord_quickmap()` computes and
  sets the correct aspect ratio between one degree of latitude and one degree
  of longitude at the centre of the plotted region. It does not perform full
  fledged mapping projection as `coord_map()` does and therefore is much
  faster. Yet, it gives a correct approximation for small scale maps (a few
  degrees in either direction) at medium to low latitudes (@jiho, #922).

* `geom_boxplot` gain new `varwidth` argument for controlling whether or not
  the width of boxplots should be proportional to the size of the groups
  (@tsieger, #927).

* `position_jitterdodge()` combines `position_jitter()` and `position_dodge()`,
  allowing the user to plot and align points generated by e.g. `geom_point()`
  with those generated by a dodged `geom_boxplot()`. See
  `example(position_jitterdodge)` for a potential usage. (@kevinushey, #932)

* Allow specifying only one of the limits in a scale and use the automatic
  calculation of the other limit by passing NA to to the limit function,
  `xlim()` or `ylim()` (@jimhester, #557).

* Allow to use brewer palettes for continuous scales, through the new
  `scale_fill/colour_distiller()` functions (@jiho, #925).

* `stat_ellipse()` adds data ellipses. It supports bivariate normal and t distributions,
  as well as a euclidian distance circle. (@jofrhwld, #926)

* Add new themes: `theme_linedraw()` is similar to `theme_bw()` but with
  truly only white and black elements and spacing between elements identical
  to `theme_gray`. `theme_light` is similar but with light gray box and axes
  around the plot, to emphasise content more (@jiho, #923)

* new theme settings panel.margin.x and panel.margin.y (units) allow